Some minor alignment fixes

--- a/app/assets/stylesheets/cookies_eu.scss
+++ b/app/assets/stylesheets/cookies_eu.scss
@@ -12,10 +12,9 @@
   .cookies-eu-content-holder {
     display: inline-block;
     float: left;
-    padding: 5px 20px;
-    line-height: 26px;
-    width: 90%;
-    
+    padding: 10px 12px;
+    line-height: 15px;
+
   }
   .cookies-eu-button-holder {
     display: inline-block;
